[gd_scene load_steps=3 format=3 uid="uid://c7y41hnr6wn74"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_rlrf4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_acpii"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlrf4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.533333, 0.521569, 0.427451, 0.980392)

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 185.0
offset_right = 726.0
offset_bottom = 265.0
text = "Host"
icon = SubResource("ViewportTexture_acpii")

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 292.0
offset_right = 723.0
offset_bottom = 372.0
text = "Join
"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 400.0
offset_right = 723.0
offset_bottom = 480.0
text = "Start Game"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
